# controllers/auth/userBody.js
@@ -2,7 +2,7 @@ const calculateCalories = require("../../helpers/calculateCalories");
 const { User } = require("../../models");
 
 const userBody = async (req, res) => {
-  const { _id, email, name } = req.user;
+  const { _id } = req.user;
   
   const body = req.body;
   const dailyСalories = calculateCalories(body);
@@ -10,7 +10,7 @@ const userBody = async (req, res) => {
 
   const updatedUser = await User.findByIdAndUpdate(
     _id,
-    { bodyParameters: { ...body }, dailyСalories, dailyTime, email, name },
+    { bodyParameters: { ...body }, dailyСalories, dailyTime, },
     {
       new: true,
       select: "-_id -createdAt -updatedAt -password -verify -verificationToken",
